test/errors/function/too_many_args.np
def fn():
    pass


fn(1)
